--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@
     border-bottom: 2px dashed #a1a1a1;
 }
 #side_title > div > a {
+    color: #4a4a4a;
     font-size: 0.4em;
 }
 #side_content {
