--- a/css/about.css
+++ b/css/about.css
@@ -13,7 +13,7 @@ https://love2dev.com/blog/responsive-hero-background-opacity/
     /* position: relative; */
 }
 #main::before {
-    background-image: url('imgs/bg_img.png');
+    background-image: url('../imgs/bg_img.png');
     background-size: cover;
     background-repeat: no-repeat;
     content: "";
@@ -50,7 +50,7 @@ https://love2dev.com/blog/responsive-hero-background-opacity/
 .header_btn {
     width: 100px;
     height: 50px;
-    margin: 10px 30px;
+    margin: 10px 15px;
     border: 0;
     border-radius: 10px;
     font-weight: bold;
@@ -63,9 +63,26 @@ https://love2dev.com/blog/responsive-hero-background-opacity/
     background-color: #cbcbcb;
 }
 
+/** 자기소개서 */
 #page_two {
     height: 100vh;
-    border: 1px solid red;
+    padding: 30px;
+}
+#title {
+    font-size: 2.25em;
+    padding: 15px 10px;
+}
+#title > h1 > span {
+    border-bottom: 2px solid #c4c4c4;
+}
+#introduce {
+    padding: 15px 10px;
+}
+.introduce_text {
+    font-size: 1.125em;
+    color: #000000;
+    line-height: 30px;
+    margin-top: 30px;
 }
 
 
