--- a/css/about.css
+++ b/css/about.css
@@ -62,27 +62,42 @@ https://love2dev.com/blog/responsive-hero-background-opacity/
 .header_btn:hover {
     background-color: #cbcbcb;
 }
+@media (max-width: 940px) {
+    #header {
+        display: block;
+        position: relative;
+        padding-top: 0;
+    }
+    #in_header {
+        justify-content: center;
+    }
+}
 
 /** 자기소개서 */
 #page_two {
-    height: 100vh;
+    min-height: 100vh;
     padding: 30px;
 }
 #title {
     font-size: 2.25em;
     padding: 15px 10px;
 }
-#title > h1 > span {
+#title > h1 {
+    padding-bottom: 3px;
     border-bottom: 2px solid #c4c4c4;
 }
 #introduce {
     padding: 15px 10px;
 }
+.introduce_subtitle {
+    margin-bottom: 5px;
+    font-size: 1.325em;
+    word-break: break-all;
+}
 .introduce_text {
-    font-size: 1.125em;
-    color: #000000;
     line-height: 30px;
     margin-top: 30px;
+    font-size: 1.125em;
 }
 
 
