--- a/css/about.css
+++ b/css/about.css
@@ -7,7 +7,7 @@
     display: flex;
     margin: auto;
     box-shadow: 1px 3px 5px #a1a1a1;
-    background-color: #ffffff;
+    background: linear-gradient(to left, #ffffff 45%, #cfcfcf);
 }
 
 /*! header -> 반응형 만들기*/
@@ -22,6 +22,9 @@
     align-items: center;
     width: 100%;
     margin: 0 auto;
+}
+#show_menu {
+    display: flex;
 }
 .header_btn {   
     width: 100px;
@@ -45,10 +48,18 @@
     display: none;
 }
 @media (max-width: 940px) {
+    #side_title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 0 !important;
+    }
+    #side_title > div {
+        margin: 0 15px !important;
+    }
     #header {
         display: block;
         position: relative;
-        background-color: #cfcfcf;
         padding-top: 10px;
     }
     #in_header {
@@ -64,8 +75,7 @@
         display: block;
     }
     #show_menu {
-        bottom: -100px;
-        position: absolute;
+        display: flex;
     }
     .header_btn {
         display: block;
@@ -77,7 +87,7 @@
 #sidebar {
     position: relative;
     width: 15%;
-    /* width: 211px; */
+    height: 80vh;
     text-align: center;
 }
 #side_title {
@@ -85,7 +95,6 @@
     font-size: 2em;
     border-bottom: 2px dashed #a1a1a1;
     overflow-wrap: break-word;
-    background-color: #cfcfcf;
 }
 #side_title > div {
     margin: 15px 0;
@@ -115,6 +124,7 @@
     }
     #sidebar {
         width: 100%;
+        height: auto;
     }
     #side_content {
         display: flex;
@@ -143,7 +153,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to top, #ffffff, #aaaaaa);
 }
 /** 소개 */
 #descrip {
@@ -182,7 +191,6 @@
 /*! pictures */
 #pics {
     text-align: center;
-    background: linear-gradient(to bottom, #ffffff, #aaaaaa);
 }
 /** 사진 넘기는 버튼 */
 #pic_btns {
@@ -208,7 +216,7 @@
     margin-top: 30px;
 }
 #pic > h3 {
-    background-color: #f1f1f1;
+    background-color: #ffffff00;
     font-size: 1.3em;
     padding: 20px 0;
     width: 100%;
