--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,7 @@
     position: relative;
     display: flex;
     margin: auto;
+    padding-bottom: 100px;
     box-shadow: 1px 3px 5px #a1a1a1;
     background: linear-gradient(to left, #ffffff 45%, #cfcfcf);
 }
